--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Issues to crack</h1>
-
+    <a href="/issues/new">New task</a>
     <% for (let issue of issues) { %>
     <form action="/issues/<%=issue.id%>" method="post">
       <input onChange="this.form.submit()" type="checkbox" id="<%=issue.id%>" 
