Enabled saving new task

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -26,7 +26,12 @@
             <label for="time_end">time_end:</label>
             <input type="text" id="time_end" name="issue[time_end]">
         </section>
+        <section>
+            <label for="priority">priority:</label>
+            <input type="text" id="priority" name="issue[priority]">
+        </section>
 
+        <button>Save new task</button>
       <a href="/issues/">back and forget about this task</a>
     </form>
 
