--- a/views/issue.ejs
+++ b/views/issue.ejs
@@ -12,6 +12,8 @@
       <input onChange="this.form.submit()" type="checkbox" id="<%=issue.id%>" 
         name="issue" <%=issue.completed ? "checked" : ''%> >
       <label for="<%=issue.id%>"><%=issue.name %></label>
+      <p><%= issue.priority%></p>
+      <p><%= issue.details%></p>
       <p><%= issue.time_start%></p>
       <p><%= issue.time_end%></p>
       <a href="/issues/">back</a>
