Edited the tittles of pages

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Issues</title>
+    <title>New issue</title>
 </head>
 <body>
     <h1>New issue to crack</h1>
@@ -15,8 +15,7 @@
         </section>
         <section>
             <label for="details">Details:</label>
-            <textarea type="textarea" id="details" name="issue[details]" rows="4" cols="50">
-            </textarea>
+            <textarea type="textarea" id="details" name="issue[details]" rows="4" cols="50"></textarea>
         </section>
         <section>
             <label for="time_start">time_start:</label>
