--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Error page</title>
 </head>
 <body>
     <h2>Error code: <%=error.statusCode%></h2>
