Added simple user delete

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,5 +23,8 @@
       <button>Delete this task</button>
     </form>
     <%} %>
+    <form action="/users/delete?_method=DELETE" method="post">
+      <button>Delete user</button>
+    </form>
 </body>
 </html>
