--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,7 @@
     <title>Login</title>
 </head>
 <body>
+    <%- include("./partials/navbar") %>
     <form action="/users/login" method="post">
         <section>
             <label for="name">Name:</label>
