--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,6 +6,7 @@
     <title>New issue</title>
 </head>
 <body>
+    <%- include("./partials/navbar") %>
     <h1>New issue to crack</h1>
 
     <form action="/issues" method="post">
