--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,6 +6,7 @@
     <title>Registration</title>
 </head>
 <body>
+    <%- include("./partials/navbar") %>
     <form action="/users/register" method="post">
         <section>
             <label for="name">Name:</label>
