--- a/views/deleted.ejs
+++ b/views/deleted.ejs
@@ -6,6 +6,7 @@
     <title>Deleted user</title>
 </head>
 <body>
+    <%- include("./partials/navbar") %>
     <h2>User successfuly deleted</h2>
 </body>
 </html>
