--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     <title>Issues</title>
 </head>
 <body>
+    <%- include("./partials/navbar") %>
     <h1>Issues to crack</h1>
     <a href="/issues/new">New task</a>
     <% for (let issue of issues) { %>
