--- a/views/issue.ejs
+++ b/views/issue.ejs
@@ -6,6 +6,7 @@
     <title>Issue details</title>
 </head>
 <body>
+  <%- include("./partials/navbar") %>
     <h1>Issue to crack</h1>
 
     <form action="/issues/<%=issue.id%>" method="post">
