--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit issue</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+    crossorigin="anonymous">
+
 </head>
 <body>
     <%- include("./partials/navbar") %>
@@ -34,7 +39,7 @@
         </section>
 
         <button>Save edited task</button>
-      <a href="/issues/">back and forget about this edit</a>
+      <a href="/issues">back and forget about this edit</a>
     </form>
 
 </body>
