--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css" type="text/css">    
+
     <title>Issues</title>
 </head>
 <body>
     <%- include("./partials/navbar") %>
-    <h1>Issues to crack</h1>
-    <a href="/issues/new">New task</a>
-    <% for (let issue of issues) { %>
-    <form action="/issues/<%=issue.id%>" method="post">
-      <input onChange="this.form.submit()" type="checkbox" id="<%=issue.id%>" 
-        name="issue" <%=issue.completed ? "checked" : ''%> >
-      <label for="<%=issue.id%>"><%=issue.name %></label>
-      
-      <p><%= issue.priority%></p>
+    <div class="container">
+      <h1>Issues to crack</h1>
+      <a href="/issues/new">New task</a>
+      <div class="container issue">
+        <% for (let issue of issues) { %>
+          <form class="issue-form" action="/issues/<%=issue.id%>" method="post">
+            <div class="issue-form-part">
+              <input onChange="this.form.submit()" type="checkbox" id="<%=issue.id%>" 
+              name="issue" <%=issue.completed ? "checked" : ''%> >
+              <label for="<%=issue.id%>"><%=issue.name %></label>
+              <a href="/issues/<%=issue.id%>">details</a>
+            </div>
+            <div class="issue-form-part">
+              <span><%= issue.priority%></span>
 
-      <a href="/issues/<%=issue.id%>/edit">Edit comment</a>
-      <a href="/issues/<%=issue.id%>">details</a>
-    </form>
-    <form action="/issues/<%=issue.id%>?_method=DELETE" method="post">
-      <button>Delete this task</button>
-    </form>
-    <%} %>
-    <form action="/users/delete?_method=DELETE" method="post">
-      <button>Delete user</button>
-    </form>
+              <a href="/issues/<%=issue.id%>/edit">Edit comment</a>
+
+              <form action="/issues/<%=issue.id%>?_method=DELETE" method="post">
+                <button class="btn btn-secondary">Delete this task</button>
+              </form>
+            </div>
+
+          </form>
+
+        <%} %>
+      </div>
+      
+      <form action="/users/delete?_method=DELETE" method="post">
+        <button class="btn btn-secondary">Delete user</button>
+      </form>
+    </div>
+    
+    <%- include("./partials/footer") %>
 </body>
 </html>
