--- a/views/issue.ejs
+++ b/views/issue.ejs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Issue details</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+    crossorigin="anonymous">
+
 </head>
 <body>
   <%- include("./partials/navbar") %>
@@ -20,5 +25,6 @@
       <a href="/issues/">back</a>
     </form>
 
+    <%- include("./partials/footer") %>
 </body>
 </html>
