--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+    crossorigin="anonymous">
+
+    <!-- <link rel="stylesheet" href="css/style.css" type="text/css">     -->
     <title>Login</title>
 </head>
 <body>
@@ -18,7 +25,7 @@
             <input type="password" id="password" name="password">
         </section>
 
-        <button>Login</button>
+        <button class="btn btn-secondary">Login</button>
     </form>
     <a href="/users/register">Register</a>
 </body>
