--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,13 +1,28 @@
 <nav>
-    <div class="navbar">
-        <%if (!currentUser) { %>
-        <a href="/users/login">Login</a>
-        <a href="/users/register">Register</a>
-        <% } else { %>
-        <a href="/issues">Home</a>
-        <a href="/issues/new">Create new issue</a>
-        <a href="/users/logout">Logout</a>
-        <a href="/users/delete">Delete user</a>
-        <% } %>
+    <div class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class = "container">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <%if (!currentUser) { %>
+                <li  class="nav-item">
+                    <a class="nav-link" href="/users/login">Login</a>
+                </li>
+                <li  class="nav-item">
+                    <a class="nav-link" href="/users/register">Register</a>
+                </li>
+            
+            <% } else { %>
+                <li  class="nav-item">
+                    <a class="nav-link" href="/issues">Home</a>
+                </li>
+                <li  class="nav-item"> 
+                    <a class="nav-link" href="/issues/new">New issue</a>
+                </li>
+                <li  class="nav-item">
+                    <a class="nav-link" href="/users/logout">Logout</a>
+                </li>
+            <% } %>
+            </ul>
+        </div>
+       
         </div>
 </nav>
