--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+    crossorigin="anonymous">
+
 </head>
 <body>
     <%- include("./partials/navbar") %>
@@ -26,7 +31,7 @@
             <input type="password" id="passwordRepeated" name="user[passwordRepeated]">
         </section>
 
-        <button>Register</button>
+        <button class="btn btn-secondary">Register</button>
 
     </form>
     <a href="/users/login">Login</a>
