--- a/views/issue.ejs
+++ b/views/issue.ejs
@@ -16,9 +16,9 @@
     <h1>Issue to crack</h1>
 
     <form action="/issues/<%=issue.id%>" method="post">
-      <input onChange="this.form.submit()" type="checkbox" id="<%=issue.id%>" 
+      <input  class="form-check-input" onChange="this.form.submit()" type="checkbox" id="<%=issue.id%>" 
         name="issue" <%=issue.completed ? "checked" : ''%> >
-      <label for="<%=issue.id%>"><%=issue.name %></label>
+      <label  class="form-check-label" for="<%=issue.id%>"><%=issue.name %></label>
       <p><%= issue.priority%></p>
       <p><%= issue.details%></p>
       <p><%= issue.time_start%></p>
