--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@
 nav .navbar{
   background-color: var(--color1);
   color: whitesmoke;
+  margin-bottom: 2%;
 }
 
 .btn{
@@ -21,6 +22,7 @@ nav .navbar{
 a{
   color: var(--color3);
 }
+
 input[type='checkbox'] {
   accent-color: var(--color3);
   color:white
