--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 <body>
     <%- include("./partials/navbar") %>
     <div class="container">
-      <h1>Issues to crack</h1>
+      <h1 class="text-center">Issues to crack</h1>
       <a href="/issues/new">New task</a>
       <div class="container issue">
         <% for (let issue of issues) { %>
