--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
     <%- include("./partials/navbar") %>
     <div class="container">
       <h1 class="text-center">Issues to crack</h1>
-      <div class="container-home">
+      <div class="container-main">
         <a class="new-task-link" href="/issues/new">New task</a>
 
         <div class="container issue">
