--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,22 +14,32 @@
     <title>Login</title>
 </head>
 <body>
-    <%- include("./partials/navbar") %>
-    <div class="container">
+
+    <div class="container container-centered container-startpage">
+        <h1 class="text-center">Welcome to Issues Tracker</h1>
+        
         <form action="/users/login" method="post">
-        <section>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="loginName">
-        </section>
+        <div class ="form-group row">
+            <label class="col-sm-2 col-form-label" for="name">Name:</label>
+            <div class="col-sm-8">
+                <input class="form-control" type="text" id="name" name="loginName">
+            </div>
+        </div>
 
-        <section>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password">
-        </section>
+        <div  class ="form-group row">
+            <label class="col-sm-2 col-form-label" for="password">Password:</label>
+            <div class="col-sm-8">
+                <input class="form-control" type="password" id="password" name="password">
+            </div>
+        </div>
 
-        <button class="btn btn-secondary">Login</button>
+        <div  class="el-centered text-center">
+            <button class="btn btn-secondary col-sm-4">Login</button>
+            <a href="/users/register">Register</a>
+        </div>
+
         </form>
-        <a href="/users/register">Register</a>
+        
     </div>
     
 </body>
