--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,29 +13,44 @@
 
 </head>
 <body>
-    <%- include("./partials/navbar") %>
-    <form action="/users/register" method="post">
-        <section>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="user[loginName]">
-        </section>
-        <section>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="user[email]">
-        </section>
-        <section>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="user[password]">
-        </section>
 
-        <section>
-            <label for="passwordRepeated">Repeat password:</label>
-            <input type="password" id="passwordRepeated" name="user[passwordRepeated]">
-        </section>
+    <div class="container container-centered container-startpage">
+        <h1 class="text-center">Welcome to Issues Tracker</h1>
+        <form action="/users/register" method="post">
+            <div class ="form-group row">
+                <label class="col-sm-2 col-form-label" for="name">Name:</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="text" id="name" name="user[loginName]">
+                </div>
+            </div>
+            <div class ="form-group row">
+                <label class="col-sm-2 col-form-label" for="email">Email:</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="email" id="email" name="user[email]">
+            
+                </div>
+            </div>
+            <div class ="form-group row">
+                <label  class="col-sm-2 col-form-label" for="password">Password:</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="password" id="password" name="user[password]">
+                </div>
+            </div>
 
-        <button class="btn btn-secondary">Register</button>
+            <div class ="form-group row">
+                <label  class="col-sm-2 col-form-label" for="passwordRepeated">Repeat password:</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="password" id="passwordRepeated" name="user[passwordRepeated]">
+                </div>
+            </div>
 
-    </form>
-    <a href="/users/login">Login</a>
+
+            <div  class="el-centered text-center">
+                <button class="btn btn-secondary col-sm-4">Register</button>
+                <a href="/users/login">Login</a>
+            </div>
+            
+        </form>
+    </div>
 </body>
 </html>
