Added sector borders to home page

--- a/views/issue.ejs
+++ b/views/issue.ejs
@@ -41,7 +41,7 @@
           <p><%= issue.time_end%></p>
         </div>
         
-        <a href="/issues/">back</a>
+        <a href="/issues">back</a>
       </form>
     </div>
 
