--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,15 @@ nav .navbar{
   margin: 0 12%;
 }
 
+.navbar-flex{
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbar-flex .navbar-flex-part{
+  display: flex;
+}
+
 .container-main{
   margin: 0 12%;
 }
@@ -26,7 +35,7 @@ nav .navbar{
 }
 .container-startpage form{
     background-color: #fcf9e8;
-    border-radius: 6%;
+    border-radius: 30px;
     padding: 4%
 }
 .container-startpage h1{
@@ -43,10 +52,18 @@ nav .navbar{
   background-color: var(--color3);
   border: 0cm;
 }
+.issue{
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
 .issue .issue-form{
   display: flex;
   justify-content: space-between;
-  padding: 1% 0%;
+  margin-bottom: 1%;
+  
+  background-color: #fcf9e8;
+  border-radius: 30px;
+  padding: 4%
 }
 
 
@@ -67,6 +84,7 @@ nav .navbar{
 .container-form-part-with-button{
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .details-group{
@@ -104,5 +122,9 @@ a:hover{
 input[type='checkbox'], .form-check-input {
   accent-color: var(--color3);
   color:white
+}
+
+.footer-block .nav-item{
+  padding: 0 1%
 }
 
