--- a/views/new.ejs
+++ b/views/new.ejs
@@ -27,15 +27,15 @@
                     <textarea class="form-control" rows="3"type="textarea" id="details" name="issue[details]" rows="4" cols="50"></textarea>
                 </div>
                 <div class ="form-group">
-                    <label for="time_start">time_start:</label>
+                    <label for="time_start">Time to start:</label>
                     <input class="form-control" type="text" id="time_start" name="issue[time_start]">
                 </div>
                 <div class ="form-group">
-                    <label for="time_end">time_end:</label>
+                    <label for="time_end">Time to end:</label>
                     <input class="form-control" type="text" id="time_end" name="issue[time_end]">
                 </div>
                 <div class ="form-group">
-                    <label for="priority">priority:</label>
+                    <label for="priority">Priority:</label>
                     <input class="form-control" type="text" id="priority" name="issue[priority]">
                 </div>
             </div>
