--- a/views/deleted.ejs
+++ b/views/deleted.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
     <%- include("./partials/navbar") %>
-    <h2>User successfuly deleted</h2>
+    <h2 class="text-center">User successfuly deleted</h2>
     <%- include("./partials/footer") %>
 </body>
 </html>
