Made navigation fixed on top, added footer to other pages

--- a/views/deleted.ejs
+++ b/views/deleted.ejs
@@ -13,7 +13,10 @@
 </head>
 <body>
     <%- include("./partials/navbar") %>
-    <h2 class="text-center">User successfuly deleted</h2>
+    <div class="container-main">
+        <h2 class="text-center">User successfuly deleted</h2>
+    </div>
+    
     <%- include("./partials/footer") %>
 </body>
 </html>
