--- a/views/new.ejs
+++ b/views/new.ejs
@@ -13,6 +13,7 @@
 </head>
 <body>
     <%- include("./partials/navbar") %>
+    <div class="container-main">
     <h1 class="text-center">New issue to crack</h1>
 
     <form class="issue-form-edit" action="/issues" method="post">
@@ -46,6 +47,7 @@
             </div>
         </div>
     </form>
-
+    </div>
+    <%- include("./partials/footer") %>
 </body>
 </html>
