--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
   --color4:#4F6F52;
 }
 
-nav .navbar{
+.navbar{
   background-color: var(--color1);
   color: whitesmoke;
   margin-bottom: 2%;
@@ -25,6 +25,9 @@ nav .navbar{
 
 .container-main{
   margin: 0 12%;
+  padding-top: 6%;
+  padding-bottom: 2%;
+  
 }
 .container-centered{
   padding: 0 24%;
