--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer navbar-fixed-bottom">
     <div>
         <div class="container">
             <div class = "footer-block">
