--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,37 +1,35 @@
-<nav>
-    <div class="navbar navbar-expand-lg">
-        <div class = "container">
-            <ul class="navbar-nav">
-            <%if (!currentUser) { %>
-                <li  class="nav-item">
-                    <a class="nav-link" href="/users/login">Login</a>
-                </li>
-                <li  class="nav-item">
-                    <a class="nav-link" href="/users/register">Register</a>
-                </li>
-            
-            <% } else { %>
-                <div class="navbar-flex">
-                    <div class="navbar-flex-part">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/issues">Home</a>
-                        </li>
-                      
-                        <li  class="nav-item"> 
-                            <a class="nav-link" href="/issues/new">New issue</a>
-                        </li>
-                    </div>
-                    <div class="navbar-flex-part right">
-                        <li  class=" nav-item">
-                            <a class="nav-link" href="/users/logout">Logout</a>
-                        </li>
-                    </div>
+<nav class="navbar fixed-top  navbar-expand-lg">
+    <div class = "container">
+        <ul class="navbar-nav">
+        <%if (!currentUser) { %>
+            <li  class="nav-item">
+                <a class="nav-link" href="/users/login">Login</a>
+            </li>
+            <li  class="nav-item">
+                <a class="nav-link" href="/users/register">Register</a>
+            </li>
+        
+        <% } else { %>
+            <div class="navbar-flex">
+                <div class="navbar-flex-part">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/issues">Home</a>
+                    </li>
+                    
+                    <li  class="nav-item"> 
+                        <a class="nav-link" href="/issues/new">New issue</a>
+                    </li>
                 </div>
-             
-               
-            <% } %>
-            </ul>
-        </div>
+                <div class="navbar-flex-part right">
+                    <li  class=" nav-item">
+                        <a class="nav-link" href="/users/logout">Logout</a>
+                    </li>
+                </div>
+            </div>
+            
+            
+        <% } %>
+        </ul>
+    </div>
        
-        </div>
 </nav>
