Added the functionality for editing user information

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -43,7 +43,7 @@
             
             <div class="container-form-part container-form-part-with-button">
                 <a href="/issues">back and forget about this task</a>
-                <button class="btn btn-secondary">Save new task</button>
+                <button class="btn btn-secondary">Save</button>
             </div>
         </div>
     </form>
