--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,6 +22,11 @@
                 </div>
                 <div class="navbar-flex-part right">
                     <li  class=" nav-item">
+                        <a class="nav-link" href="/users/edit">Edit user</a>
+                    </li>
+                </div>
+                <div class="navbar-flex-part right">
+                    <li  class=" nav-item">
                         <a class="nav-link" href="/users/logout">Logout</a>
                     </li>
                 </div>
