--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,6 +10,9 @@
                         <a class="nav-link link-secondary px-2 px-md-3" href="/issues/new">Create new issue</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link link-secondary px-2 px-md-3"  href="/users/edit">Edit user</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link link-secondary px-2 px-md-3"  href="/users/logout">Logout</a>
                     </li>
                    
@@ -19,7 +22,7 @@
             <div class = "footer-block">
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
-                        <p>Last update: 12.4.2024</p>
+                        <p>Last update: 13.4.2024</p>
                     </li>
                     <li class="nav-item">
                         <p>Project for UHK FIM</p>
